#4051 Fix search extraction for Elastic indexes